# ps-organizer

./: Cargo.toml  README.md
src/: cli.rs  executor.rs  grouper.rs  lib.rs  main.rs  planner.rs  scanner.rs  types.rs
tests/: integration.rs
